--- a/src/shared/styles/colors.scss
+++ b/src/shared/styles/colors.scss
@@ -10,7 +10,7 @@ $primary-border-color: rgba(17, 17, 17, 0.1);
 $primary-input-color: rgba(17, 17, 17, 0.05);
 $primary-text-white-color: rgba(255, 255, 255, 0.70);
 $primary-text-black-color: rgba(17, 17, 17, 0.70);
-$error-input-color: #dc3353;
+$error-input-color: #E74A3B;
 
 // $primary-accent-color: #facf5a;
 // $primary-background-accent-color: #f7f5ed;
